log
Thu 24 Aug 2023 08:10:27 PM UTC: 
 tests:  0|6
total_score: 0/70
67e8563
Thu 24 Aug 2023 08:17:01 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
cdee942
Thu 24 Aug 2023 08:17:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
5173b7d
Thu 24 Aug 2023 08:18:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b24664e
Thu 24 Aug 2023 08:22:57 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
8e05c3d
Thu 24 Aug 2023 08:26:27 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:65:8: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   65 |   list -> prev = NULL;
      |        ^~
list.c:66:8: error: statement with no effect [-Werror=unused-value]
   66 |   list -> tail;
      |   ~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ee1f44b
Thu 24 Aug 2023 08:27:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:65:8: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   65 |   list -> prev = NULL;
      |        ^~
Compilation failed
54d47d3
Thu 24 Aug 2023 08:30:19 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
91783c7
Thu 24 Aug 2023 08:40:27 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c:70:1: error: expected identifier or ‘(’ before ‘}’ token
   70 | }
      | ^
Compilation failed
a5d5386
Thu 24 Aug 2023 08:41:27 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|4
total_score: 20/70
388b566
